--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Fetch API</title>
+    
 </head>
 <body>
-    
+    <main>
+        <h1>Aprendendo a usar a Fetch API</h1>
+        <button onclick="fetchApiData()">Clique aqui para preencher a lista</button>
+        <ul id="fill_list"></ul>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
