--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
             display: flex;
             height: 100vh;
             margin: 0;
+            background-color: #414040;
+            color: aliceblue;
         }
         #lista-mudancas {
-            width: 35%;
+            width: 40%;
             overflow-y: auto;
             padding: 10px;
         }
         #calendario-container {
-            width: 65%;
+            width: 60%;
             overflow-x:auto;
             padding: 10px;
         }
@@ -28,12 +30,12 @@
             font-size: 0.6em;
         }
         th, td {
-            border: 1px solid #ddd;
+            border: 1px solid #070707;
             padding: 3px;
             text-align: center;
         }
         th {
-            background-color: #f2f2f2;
+            background-color: #55355e;
         }
         .fc {
             font-size: 0.8em;
